# spotify-curator

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
deploy/: .env.example  Dockerfile  README.md  compose.yml
deploy/scripts/: auth_on_host.sh
deploy/secrets/: spotify_cache.example.json
docs/: ARCHITECTURE.md  FP_PLAN.md  SETUP_GITHUB_AUTH.md  V0.2_PLAN.md
skills/spotify-curator/: SKILL.md
skills/spotify-curator/references/: commands.md  mood_taxonomy.md
src/analyzer/: cache.py  fetch.py  profile.py  types.py  weights.py
src/cli/: __main__.py  main.py
src/daemon/: __init__.py  scheduler.py  workflow.py
src/discovery/: ranking.py
src/discovery/sources/: lastfm.py  listenbrainz.py  musicbrainz.py  reddit.py
src/hermes_skill/: __init__.py  tools.py
src/playlist/: builder.py
src/spotify/: api_v2.py  auth.py
tests/: test_api_v2.py  test_cli.py  test_daemon.py  test_hermes_skill.py  test_lastfm.py  test_listenbrainz.py  test_musicbrainz.py  test_playlist_builder.py  test_profile.py  test_ranking.py  test_reddit.py  test_spotify_integration.py
tests/fixtures/cassettes/: library_contains_tracks.json  spotify_api_v2_endpoints.json
